--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,22 @@
 			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+
+	<repository>
+		<id>releases</id>
+		<name>Releases</name>
+		<url>http://13.233.126.72:8081/nexus/content/repositories/releases</url>
+	</repository>
+
+	<snapshotRepository>
+		<id>snapshots</id>
+		<name>Snapshots</name>
+		<url>http://13.233.126.72:8081/nexus/content/repositories/snapshots</url>
+	</snapshotRepository>
+
+</distributionManagement>
+ 
+
 
 </project>
